# c3bridge-server

./: .gitattributes  .gitignore  C3Bridge.dsp  C3Bridge.dsw  C3Bridge.sln  C3Bridge.vcxproj  C3Bridge.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
dependencies/compatibility/: cstdint
documents/C3 Bridge Interface Protocol 1.4/: index.htm
documents/C3 Bridge Interface Protocol 1.4/css/: style.css
documents/C3 Bridge Interface Protocol 1.5/: index.htm
include/: c3bi.h
resources/: main.manifest
source/: aboutdialog.cpp  aboutdialog.h  application.cpp  application.h  bstring.cpp  bstring.h  bufferstream.cpp  bufferstream.h  callbackerrorimplementation.cpp  callbackerrorimplementation.h  client.cpp  client.h  client_cross.cpp  client_file.cpp  client_variables.cpp  cross3.cpp  cross3.h  cross3krc.cpp  cross3krc.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryallocator.cpp  memoryallocator.h  messagebuilder.cpp  messagebuilder.h  messagereader.cpp  messagereader.h  proxy.cpp  proxy.h  resource.h  resources.rc  ringbuffer.cpp  ringbuffer.h  ringstream.cpp  ringstream.h  safe.cpp  safe.h  (+15 more)
source/handlers/: client_control.cpp  client_cross.cpp  client_file.cpp  client_service.cpp  client_variables.cpp
